k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-hub
  labels:
    name: api-hub
    environment: production
